# adar

./: .gitignore  LICENSE  README.md  adarpc_entry.py  docs.html  guide.md  index.html  install.bat  install.ps1  pyproject.toml  script.js  style.css  temp_adarlib.html  temp_adarlib_publish.html
adar/: cli.py
adar/adarpc/: __init__.py  build.py  cli.py  config.py  dev.py  install.py  package.py  project.py  publish.py  registry.py  resolve_imports.py
adar/adarpc/templates/: button.adar  index.html  main.js  style.adar
adar/checker/: __init__.py  checker.py  css_spec.py
adar/codegen/: codegen.py
adar/parser/: __init__.py  ast.py  parser.py
adar/resolver/: resolver.py
adarlib/style/: style.css
compiler/adarpc/: build.py  project.py
compiler/adarpc/templates/: index.html
compiler/lexer/: __init__.py
docs/: docs.html  guide.md  index.html  old_index.html  script.js  style.css
docs/adarlib/: index.html
docs/compiler/codegen/: __init__.py
docs/compiler/lexer/: lexer.py  token.py
docs/style/: style.css
examples/src/: button.adar  if-advanced.adar  if-else.adar  type-error.adar
libraries/: registry.json
libraries/adar-ui-core/: adarpc.toml  index.adar
libraries/adar-ui-fancy/: adarpc.toml  index.adar
libraries/adar-ui-pro/: adarpc.toml  index.adar
libraries/daisy-adar/: adarpc.toml
libraries/material-adar/: adarpc.toml
libraries/tailwind-adar/: adarpc.toml
scripts/: build_exe.py  bundle_compiler.py
sites/adar-main/: adarpc.toml
sites/adarlib-site/: adarpc.toml
tests/: test_checker.py  test_lexer.py
(+9 files in other folders)
