[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adar"
version = "0.1.0"
description = "Modern CSS-like utility-first styling language with type checking"
authors = [{ name = "Adar" }]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
adar = "adar.cli:main"
adarpc = "adar.adarpc.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
